chore: checking the changelogs again

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cryptlex/lexactivator",
   "version": "3.26.3",
-  "description": "LexActivator API wrapper for Node.js...",
+  "description": "LexActivator API wrapper for Node.js!!",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
